# hector_perception_msgs

./: CMakeLists.txt  LICENSE  README.md  package.xml
action/: DetectObject.action  LocalizeBars.action  LookAt.action  LookAtObservationPose.action
msg/: BoundingBox2D.msg  CameraPatternInfo.msg  EnvironmentRegionRequest.msg  LookAtObservationTarget.msg  LookAtTarget.msg  ObjectDetectRequest.msg  ObjectDetection2D.msg  ObjectDetection2DArray.msg  PerceptionData.msg  PerceptionDataArray.msg
srv/: GetPinholeProjection.srv  Project3DRayToPixel.srv  ProjectPixelTo3DRay.srv
